# torrent-bootstrap

./: Cargo.toml  README.md
src/: bencode.rs  finder.rs  lib.rs  main.rs  matcher.rs  metadata.rs  orchestrator.rs  processor.rs  solver.rs  torrent.rs  writer.rs
src/bencode/: error.rs  mod.rs  parser.rs  types.rs
src/filesystem/: export_path_formatter.rs  mod.rs  path_cache.rs  path_interner.rs
src/solver/: choices.rs  executor.rs  mod.rs  multiple.rs  single.rs  solver.rs  task.rs  types.rs
src/torrent/: error.rs  info.rs  mod.rs  pieces.rs  torrent.rs
